--- a/KingPim.Web/ClientApp/src/index.html
+++ b/KingPim.Web/ClientApp/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>
+    <div class='fullscreenDiv'>
+      <div class="center"><div class="loader"></div><br /><h2> starting<br />dashboard...</h2> </div>
+    </div></app-root>
 </body>
 </html>
